fix weird wrapped cards & add button marging

--- a/docs/stylesheets/neoteroi-cards.css
+++ b/docs/stylesheets/neoteroi-cards.css
@@ -56,6 +56,7 @@
     font-weight: bold;
     margin: 4px 0 8px 0;
     line-height: 22px;
+    text-align: right;
     color: var(--md-primary-bg-color);
 }
 
