--- a/docs/stylesheets/style.css
+++ b/docs/stylesheets/style.css
@@ -14,6 +14,10 @@
     text-align: center;
 }
 
+.logo .md-button {
+    margin-bottom: 4px;
+}
+
 #home__title {
     font-size: 2rem;
     font-weight: 600;
